--- a/hdcevents/package.json
+++ b/hdcevents/package.json
@@ -10,9 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "alpinejs": "^3.0.6",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss": "^3.0.0",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2"
     }
 }
